2014-05-29  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_config.php: Fixed the permission
	checks of the remote config directories on the function
	"config_check".

2014-05-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/pandora.css: fixed the css for the
	m$-internet exploter 11. Please Bill Gates travels to Leon.

2014-05-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: improved the source code style.
	
	* extensions/agents_modules.php: fixed the css for the
	m$-internet exploter 11. Please Bill Gates travels to Leon.

2014-05-29  Sergio Martin <sergio.martin@artica.es>

	* mobile/index.php: Disable the mobile console when
	ACL Enterprise is enabled

2014-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions.php: Improved the Windows
	compatibility of the function "get_snmpwalk".

2014-05-28  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_snmp.php: Improved the security
	on the function "snmp_generate_trap" by escaping the
	command arguments.
	
	* include/functions_snmp_browser.php: Improved the
	Windows compatibility of some commands.

2014-05-28  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed field that
	wasn't saved on DB in WMI modules for ticket #794

2014-05-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extensions/files_repo.php: Fixed a weird error when
	uploading big files.

	* godmode/setup/setup_general.php,
	include/functions_config.php: Now is possible to set
	a custom path to the pandora server logs.

	* extensions/pandora_logs.php,
	extensions/system_info.php: Now the custom server log path
	is used if exists.

	* include/functions.php: Now the function "get_file_upload_status"
	returns -1 when the $_FILES array is empty.

	* include/config_process.php: Fixed an error that could
	avoid the log in pandora_console.log.
